--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,7 @@
     p { margin-top: 15px; }
     
     .showcase {
-      width: 353px;
-      height: 218px;
+      width: 22rem;
       background: var(--secondary-color);
       margin: auto auto;
       
@@ -44,14 +43,13 @@
        align-items: center;
        text-align: center;
        margin: auto auto;
-       width: 350px;
-       height: 215px;
+       width: 100%;
+       height: 13.5rem;
        border-right: 5px solid #333;
-       background: var(--light-color);
+       background: linear-gradient(var(--light-color), var(--teritary-color));
        animation: fadeIn 5s ease-in; 
      }
-    /* Tried to hide and then make appear after hover. Almost worked 
-    
+    /* Tried to hide and then make appear after hover. Almost worked    
     .hidden {
       margin-top: 3px;
       visibility: hidden;
@@ -66,21 +64,22 @@
       visibility: visible;
       color: var(--dark-color);
       border: red 1px solid;
-     }
-      
+     }      
     .visible:active { visibility: hidden; }
-     */    
+     */
+
     img {      
-      width: 150px;
-      height: 125px;           
+      width: 9rem;
+      height: 7.8rem;
+      border-radius: 5px;
     }
    @keyframes fadeIn {
       0% { opacity: 0.1; }
       100% { opacity: 1; }
     }
     .flowOut {
-      height: 10px;
-      width: 360px;
+      height: 0.7rem;
+      width: 22rem;
       background: #333;
       animation: flowOut 5s ease-in-out forwards;
     }
@@ -98,7 +97,7 @@
   box-shadow: 2px 5px 20px;
   border-radius: 20px;
   padding: 5px 30px;
-  margin-top: 15px;
+  margin-top: 0.9rem;
   color: var(--dark-color);
   cursor: pointer;
   transition: all 1s ease-in-out;
